--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "svelte-hash-router",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "Svelte Hash Router",
   "keywords": [
     "hash",
