--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rollup": "^1.14.6",
     "rollup-plugin-browsersync": "^1.0.0",
     "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-copy": "^3.0.0",
     "rollup-plugin-node-resolve": "^5.0.1",
     "rollup-plugin-svelte": "^5.1.0",
     "stylelint": "^10.1.0",
